final prefet pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 env
+airflow
+.terraform 
+keys/
+.env
+.terraform.lock.hcl
+.terraform/
+__pycache__/
+debug.log
+ermm.md
+main.tf
+provider.tf
+schema.py
+schema_1741942227.860615.txt
+schema_1741942393.4431.txt
+terraform.tfstate
+terraform.tfstate.backup
+test.md
+tfplan
+variable.tf
